# jsonmark

./: .gitignore  Makefile  README.md  setup.cfg
JSONMark/: .python-version  Makefile  README.md  pyproject.toml  setup.cfg
JSONMark/deserializers/cpp/: README.md  main.cpp
JSONMark/deserializers/go/: go.mod
JSONMark/deserializers/java/: build.gradle
JSONMark/deserializers/java/src/main/java/im/tail/jsonmark/deserializer/: App.java
JSONMark/deserializers/nodejs/: main.js
JSONMark/deserializers/python/: main.py
JSONMark/deserializers/rust/: main.rs
JSONMark/jsonmark/: benchmarks.py  cli.py
deserializers/cpp/: meson.build
deserializers/go/: go.mod  go.sum  main.go
deserializers/java/: .gitignore  settings.gradle
deserializers/java/src/main/java/im/tail/jsonmark/deserializer/: App.java
deserializers/java/src/test/java/im/tail/jsonmark/deserializer/: AppTest.java
deserializers/python/: main.py
deserializers/rust/: Cargo.toml
scripts/: benchmark.py
tests/: test_jsonmark.py
