[metadata]
name = jsonmark
author = Jason Yan
author-email = tailofthesun@gmail.com
summary = JSON (and other schema-less parsing) Benchmarking Suite
description-file = README.md
description-content-type = text/markdown

[files]
packages =
    jsonmark

[entry_points]
console_scripts =
    jsonmark = jsonmark.cli:main

[flake8]
ignore = E731
