[package]
name = "jsonmark-deserializer-rust"
version = "0.1.0"
authors = ["Jason Yan <tailofthesun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
simd-json = "0.3.9"

[[bin]]
name = "jsonmark-deserializer-rust"
path = "main.rs"

[profile.release]
lto = "fat"
